--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
-    "mongoose": "^8.13.2",
-    "socket.io": "^4.8.1"
+    "mongoose": "^8.14.1",
+    "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.7"
   },
   "description": ""
 }
